--- a/src/styles.scss
+++ b/src/styles.scss
@@ -660,6 +660,9 @@ fieldset[disabled] .btn-success.active {
     background-color: #18BC9C;
     border-color: #18BC9C;
 }
+.btn-link {
+    color: #337ab7 !important;
+}
 .btn-success .badge {
     color: #18BC9C;
     background-color: white;
