--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-header">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-header">
     <a [routerLink]="['/']" class="brand-text">
         <span class="first">Grepo</span>
         <span class="second">Data</span>
