--- a/src/app/indexer/index-home/index-home.component.html
+++ b/src/app/indexer/index-home/index-home.component.html
@@ -15,7 +15,7 @@
 					<div class="row" id="timeline">
 						<div class="col-12 col-sm-3 col-md-3 col-lg-3 text-left" style="padding: 0px;">
 							<!--<div class="col-12 col-sm-12">-->
-							<!--<button mat-button class="mat-raised-button bg-gd-2" style="z-index: 999; width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/profile">-->
+							<!--<button mat-button class="mat-raised-button bg-gd-2" style="z-index: 999; width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/auth/profile">-->
 							<!--<i class="fa fa-arrow-left"></i>&nbsp;My account-->
 							<!--</button>-->
 							<!--</div>-->
